k8s/02_storage/02_longhorn-storage/longhorn-custom-definitions/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.200
    kubernetes.io/ingress.class: traefik-external
  name: longhorn-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.local.naguiar.dev`)
      kind: Rule
      middlewares:
        - name: longhorn-default-headers
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: certificate-tls
